--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                 <h3>Навыки:</h3>
                 <ul class="skills">
                     <li>HTML/CSS</li>
-                    <li>JavaScript/NodeJS (в изучении)</li>
+                    <li>JavaScript/NodeJS</li>
+                    <li>React</li>
                     <li>Django</li>
                     <li>Flask</li>
                     <li>Middleware</li>
                     <li>MySQL/PostgreSQL/SQLite</li>
-                    <li>React (в изучении)</li>
                     <li>pyTelegramBotAPI</li>
                     <li>Git/GitHub</li>
                 </ul>
@@ -54,6 +54,32 @@
                 <h3>Образование:</h3>
                 <ul>
                     <li>Московский Политех - 3 курс системной и программной инженерии</li>
+                </ul>
+
+                <h3>Опыт работы:</h3>
+                <ul class="work-experience">
+                    <li>Фронтенд / Full-stack разработчик (учебные и проектные работы)
+                        Московский Политех, 2023 – 2025
+                        <ul class="ordered-list">
+                            <li>Участвовал в разработке веб-приложений в составе команды: планирование, распределение
+                                задач, интеграция кода и тестирование.</li>
+                            <li>Работал над фронтенд-частью проектов с использованием HTML, CSS, JavaScript, React.</li>
+                            <li>Разрабатывал серверную часть на Flask и Django, подключал базы данных (MySQL,
+                                PostgreSQL, SQLite), реализовывал CRUD-функционал, авторизацию и регистрацию
+                                пользователей.</li>
+                            <li>Вёл Git-репозитории проектов, настраивал деплой на хостинги (PythonAnywhere, Netlify).
+                            </li>
+                            <li>Создавал Telegram-ботов с использованием pyTelegramBotAPI и PostgreSQL.</li>
+                            <li>Опыт взаимодействия с API, интеграции поиска, фильтрации и сортировки данных.</li>
+                        </ul>
+                    <li>Производственная практика (в рамках университета),2024
+                        <ul class="ordered-list">
+                            <li>Разработка и поддержка учебных веб-приложений.</li>
+                            <li>Совместная работа с командой по Agile-подходу, участие в код-ревью и презентациях
+                                проектов.</li>
+                        </ul>
+                    </li>
+                    </li>
                 </ul>
 
                 <h3>Портфолио:</h3>
@@ -164,7 +190,7 @@
                     </ul>
                 </article>
             </section>
-            <p class="download-btn"><a href="resume.pdf" download>Скачать PDF</a></p>
+            <p class="download-btn"><a href="Resume_Muradov_Raul.pdf" download>Скачать PDF</a></p>
         </div>
     </main>
     <footer>
