--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                 <h3>Навыки:</h3>
                 <ul class="skills">
                     <li>HTML/CSS</li>
-                    <li>JavaScript/NodeJS</li>
+                    <li>JavaScript/TypeScript</li>
                     <li>React</li>
-                    <li>Django</li>
-                    <li>Flask</li>
-                    <li>Middleware</li>
+                    <li>Python (ООП, Flask, Django)</li>
                     <li>MySQL/PostgreSQL/SQLite</li>
+                    <li>Docker/Docker Compose</li>
                     <li>pyTelegramBotAPI</li>
                     <li>Git/GitHub</li>
+                    <li>Middleware</li>
                 </ul>
 
                 <h3>Образование:</h3>
@@ -66,7 +66,7 @@
                             <li>Работал над фронтенд-частью проектов с использованием HTML, CSS, JavaScript, React.</li>
                             <li>Разрабатывал серверную часть на Flask и Django, подключал базы данных (MySQL,
                                 PostgreSQL, SQLite), реализовывал CRUD-функционал, авторизацию и регистрацию
-                                пользователей.</li>
+                                пользователей. Контейнизировал приложения используя Docker и Docker Compose.</li>
                             <li>Вёл Git-репозитории проектов, настраивал деплой на хостинги (PythonAnywhere, Netlify).
                             </li>
                             <li>Создавал Telegram-ботов с использованием pyTelegramBotAPI и PostgreSQL.</li>
